[gd_scene load_steps=7 format=2]

[ext_resource path="res://GameHUDRelated/RightSidePanel/RoundDamageStatsPanel/Assets/SingleTowerRoundDamagePanel_Assets/SingleDamagePanel_BarBackground.png" type="Texture" id=2]
[ext_resource path="res://GameHUDRelated/RightSidePanel/RoundDamageStatsPanel/SingleTowerRoundDamageStatsPanel.gd" type="Script" id=4]
[ext_resource path="res://Fonts/consolas/CONSOLA.TTF" type="DynamicFontData" id=5]
[ext_resource path="res://GameHUDRelated/TowerIconPanel/TowerIconPanel.tscn" type="PackedScene" id=6]
[ext_resource path="res://GameHUDRelated/RightSidePanel/RoundDamageStatsPanel/AdvancedDamageSummaryBar/AdvancedDamageSummaryBar.tscn" type="PackedScene" id=7]

[sub_resource type="DynamicFont" id=1]
size = 8
font_data = ExtResource( 5 )

[node name="SingleTowerRoundDamageStatsPanel" type="MarginContainer"]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 4 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_right = 40.0
margin_bottom = 40.0
mouse_filter = 2
custom_constants/separation = 4

[node name="TowerIconPanel" parent="HBoxContainer" instance=ExtResource( 6 )]
margin_top = 20.0
margin_right = 0.0
margin_bottom = 20.0
size_flags_vertical = 6

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
margin_left = 4.0
margin_right = 4.0
margin_bottom = 40.0
mouse_filter = 2
custom_constants/separation = 1

[node name="DamageLabel" type="Label" parent="HBoxContainer/VBoxContainer"]
margin_bottom = 9.0
custom_fonts/font = SubResource( 1 )

[node name="AdvancedDamageSummaryBar" parent="HBoxContainer/VBoxContainer" instance=ExtResource( 7 )]
margin_top = 10.0
margin_right = 0.0
margin_bottom = 10.0
bar_background_pic = ExtResource( 2 )
fill_foreground_margin_top = 1.0
fill_foreground_margin_left = 1.0

[connection signal="gui_input" from="." to="." method="_on_SingleTowerRoundDamageStatsPanel_gui_input"]
